--- a/project1/requirements.txt
+++ b/project1/requirements.txt
@@ -1,4 +1,11 @@
-django
-djangorestframework
-Pillow
-mysqlclient
+asgiref==3.6.0
+Django==4.1.6
+django-filter==22.1
+djangorestframework==3.14.0
+Markdown==3.4.1
+mysqlclient==2.1.1
+Pillow==9.4.0
+Pygments==2.14.0
+pytz==2022.7.1
+sqlparse==0.4.3
+tzdata==2022.7
